samples/_failures_safe/1761713367_0117fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfd16172.c: In function ‘main’:
./samples/SAFE/__tmp_dfd16172.c:155:9: error: expected expression at end of input
  155 |         if (from < 0 || from >= node_count || to < 0 || to >= node_count || weight <
      |         ^~
./samples/SAFE/__tmp_dfd16172.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dfd16172.c:155:9: error: expected declaration or statement at end of input
